--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -1718,94 +1718,94 @@ ZMK_COMBO(ags_gt, &kp LA(LG(LS(GT))), LH2 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 // ctrl+gui+shift combos
 // ****************************************************************************
 
-// ZMK_COMBO(cgs_a, &kp LC(LG(LS((A))), RH1 RH2 LM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_b, &kp LC(LG(LS((B))), RH1 RH2 LT0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_c, &kp LC(LG(LS((C))), RH1 RH2 LB2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_d, &kp LC(LG(LS((D))), RH1 RH2 LB1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_e, &kp LC(LG(LS((E))), RH1 RH2 RM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f, &kp LC(LG(LS((F))), RH1 RH2 LT2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_g, &kp LC(LG(LS((G))), RH1 RH2 LM0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_h, &kp LC(LG(LS((H))), RH1 RH2 RB1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_i, &kp LC(LG(LS((I))), RH1 RH2 RM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_j, &kp LC(LG(LS((J))), RH1 RH2 RT0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_k, &kp LC(LG(LS((K))), RH1 RH2 RB0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_l, &kp LC(LG(LS((L))), RH1 RH2 RT1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_m, &kp LC(LG(LS((M))), RH1 RH2 RM0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_n, &kp LC(LG(LS((N))), RH1 RH2 RM1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_o, &kp LC(LG(LS((O))), RH1 RH2 RM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_p, &kp LC(LG(LS((P))), RH1 RH2 LT1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_q, &kp LC(LG(LS((Q))), RH1 RH2 LT4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_r, &kp LC(LG(LS((R))), RH1 RH2 LM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_s, &kp LC(LG(LS((S))), RH1 RH2 LM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_t, &kp LC(LG(LS((T))), RH1 RH2 LM1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_u, &kp LC(LG(LS((U))), RH1 RH2 RT2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_v, &kp LC(LG(LS((V))), RH1 RH2 LB0, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_w, &kp LC(LG(LS((W))), RH1 RH2 LT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_x, &kp LC(LG(LS((X))), RH1 RH2 LB3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_y, &kp LC(LG(LS((Y))), RH1 RH2 RT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_z, &kp LC(LG(LS((Z))), RH1 RH2 LB4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_enter, &kp LC(LG(LS((ENTER))), RH1 RH2 LM1 LM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_tab, &kp LC(LG(LS((TAB))), RH1 RH2 LT2 LT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_esc, &kp LC(LG(LS((ESC))), RH1 RH2 LM2 LM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_space, &kp LC(LG(LS((SPACE))), RH1 RH2 LT3 LM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_bspc, &kp LC(LG(LS((BSPC))), RH1 RH2 RT3 RM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_up, &kp LC(LG(LS((UP))), RH1 RH2 RT2 RT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_down, &kp LC(LG(LS((DOWN))), RH1 RH2 RM2 RM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_left, &kp LC(LG(LS((LEFT))), RH1 RH2 RM1 RM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_right, &kp LC(LG(LS((RIGHT))), RH1 RH2 RM3 RM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_home, &kp LC(LG(LS((HOME))), RH1 RH2 RT1 RT2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_end, &kp LC(LG(LS((END))), RH1 RH2 RB1 RB2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_pg_up, &kp LC(LG(LS((PG_UP))), RH1 RH2 RT4 RT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_pg_dn, &kp LC(LG(LS((PG_DN))), RH1 RH2 RB4 RB3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_0, &kp LC(LG(LS((N0))), RH1 RH2 RM5 LM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_1, &kp LC(LG(LS((N1))), RH1 RH2 RM5 LB3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_2, &kp LC(LG(LS((N2))), RH1 RH2 RM5 LB2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_3, &kp LC(LG(LS((N3))), RH1 RH2 RM5 LB1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_4, &kp LC(LG(LS((N4))), RH1 RH2 RM5 LM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_5, &kp LC(LG(LS((N5))), RH1 RH2 RM5 LM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_6, &kp LC(LG(LS((N6))), RH1 RH2 RM5 LM1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_7, &kp LC(LG(LS((N7))), RH1 RH2 RM5 LT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_8, &kp LC(LG(LS((N8))), RH1 RH2 RM5 LT2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_9, &kp LC(LG(LS((N9))), RH1 RH2 RM5 LT1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f1, &kp LC(LG(LS((F1))), RH1 RH2 RB5 LB3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f2, &kp LC(LG(LS((F2))), RH1 RH2 RB5 LB2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f3, &kp LC(LG(LS((F3))), RH1 RH2 RB5 LB1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f4, &kp LC(LG(LS((F4))), RH1 RH2 RB5 LM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f5, &kp LC(LG(LS((F5))), RH1 RH2 RB5 LM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f6, &kp LC(LG(LS((F6))), RH1 RH2 RB5 LM1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f7, &kp LC(LG(LS((F7))), RH1 RH2 RB5 LT3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f8, &kp LC(LG(LS((F8))), RH1 RH2 RB5 LT2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f9, &kp LC(LG(LS((F9))), RH1 RH2 RB5 LT1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f10, &kp LC(LG(LS((F10))), RH1 RH2 RB5 LB4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f11, &kp LC(LG(LS((F11))), RH1 RH2 RB5 LM4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_f12, &kp LC(LG(LS((F12))), RH1 RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_semicolon, &kp LC(LG(LS((SEMICOLON))), RH1 RH2 RB2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_colon, &kp LC(LG(LS((COLON))), RH1 RH2 RB3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_excl, &kp LC(LG(LS((EXCL))), RH1 RH2 RB4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_dqt, &kp LC(LG(LS((EXCL))), RH1 RH2 RT4, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_at, &kp LC(LG(LS((AT))), RH1 RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_hash, &kp LC(LG(LS((HASH))), RH1 RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_dllr, &kp LC(LG(LS((DLLR))), RH1 RH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_prcnt, &kp LC(LG(LS((PRCNT))), RH1 RH2 LB0 LM0, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_caret, &kp LC(LG(LS((CARET))), RH1 RH2 RB0 RM0, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_amps, &kp LC(LG(LS((AMPS))), RH1 RH2 RB1 RM1, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_star, &kp LC(LG(LS((STAR))), RH1 RH2 RB2 RM2, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_tilde, &kp LC(LG(LS((TILDE))), RH1 RH2 LM3 LT3, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_grave, &kp LC(LG(LS((GRAVE))), RH1 RH2 LM2 LT2, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_bslh, &kp LC(LG(LS((BSLH))), RH1 RH2 LM1 LT1, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_pipe, &kp LC(LG(LS((PIPE))), RH1 RH2 LM0 LT0, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_under, &kp LC(LG(LS((UNDER))), RH1 RH2 RM0 RT0, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_minus, &kp LC(LG(LS((MINUS))), RH1 RH2 RM1 RT1, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_equal, &kp LC(LG(LS((EQUAL))), RH1 RH2 RM2 RT2, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_plus, &kp LC(LG(LS((PLUS))), RH1 RH2 RM3 RT3, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_slash, &kp LC(LG(LS((SLASH))), RH1 RH2 RM0 RM1, ALL, COMBO_TERM_SLOW)
-// ZMK_COMBO(cgs_rbrc, &kp LC(LG(LS((RBRC))), RH1 RH2 LT2 LM1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_rbkt, &kp LC(LG(LS((RBKT))), RH1 RH2 LM2 LB1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_lbrc, &kp LC(LG(LS((LBRC))), RH1 RH2 LT2 LM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_lbkt, &kp LC(LG(LS((LBKT))), RH1 RH2 LM2 LB3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_lpar, &kp LC(LG(LS((LPAR))), RH1 RH2 RT2 RM1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_lt, &kp LC(LG(LS((LT))), RH1 RH2 RM2 RB1, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_rpar, &kp LC(LG(LS((RPAR))), RH1 RH2 RT2 RM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(cgs_gt, &kp LC(LG(LS((GT))), RH1 RH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_a, &kp LC(LG(LS(A))), RH2 RH1 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_b, &kp LC(LG(LS(B))), RH2 RH1 LT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_c, &kp LC(LG(LS(C))), RH2 RH1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_d, &kp LC(LG(LS(D))), RH2 RH1 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_e, &kp LC(LG(LS(E))), RH2 RH1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f, &kp LC(LG(LS(F))), RH2 RH1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_g, &kp LC(LG(LS(G))), RH2 RH1 LM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_h, &kp LC(LG(LS(H))), RH2 RH1 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_i, &kp LC(LG(LS(I))), RH2 RH1 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_j, &kp LC(LG(LS(J))), RH2 RH1 RT0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_k, &kp LC(LG(LS(K))), RH2 RH1 RB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_l, &kp LC(LG(LS(L))), RH2 RH1 RT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_m, &kp LC(LG(LS(M))), RH2 RH1 RM0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_n, &kp LC(LG(LS(N))), RH2 RH1 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_o, &kp LC(LG(LS(O))), RH2 RH1 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_p, &kp LC(LG(LS(P))), RH2 RH1 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_q, &kp LC(LG(LS(Q))), RH2 RH1 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_r, &kp LC(LG(LS(R))), RH2 RH1 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_s, &kp LC(LG(LS(S))), RH2 RH1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_t, &kp LC(LG(LS(T))), RH2 RH1 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_u, &kp LC(LG(LS(U))), RH2 RH1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_v, &kp LC(LG(LS(V))), RH2 RH1 LB0, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_w, &kp LC(LG(LS(W))), RH2 RH1 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_x, &kp LC(LG(LS(X))), RH2 RH1 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_y, &kp LC(LG(LS(Y))), RH2 RH1 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_z, &kp LC(LG(LS(Z))), RH2 RH1 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_enter, &kp LC(LG(LS(ENTER))), RH2 RH1 LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_tab, &kp LC(LG(LS(TAB))), RH2 RH1 LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_esc, &kp LC(LG(LS(ESC))), RH2 RH1 LM2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_space, &kp LC(LG(LS(SPACE))), RH2 RH1 LT3 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_bspc, &kp LC(LG(LS(BSPC))), RH2 RH1 RT3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_up, &kp LC(LG(LS(UP))), RH2 RH1 RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_down, &kp LC(LG(LS(DOWN))), RH2 RH1 RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_left, &kp LC(LG(LS(LEFT))), RH2 RH1 RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_right, &kp LC(LG(LS(RIGHT))), RH2 RH1 RM3 RM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_home, &kp LC(LG(LS(HOME))), RH2 RH1 RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_end, &kp LC(LG(LS(END))), RH2 RH1 RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_pg_up, &kp LC(LG(LS(PG_UP))), RH2 RH1 RT4 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_pg_dn, &kp LC(LG(LS(PG_DN))), RH2 RH1 RB4 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_0, &kp LC(LG(LS(N0))), RH2 RH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_1, &kp LC(LG(LS(N1))), RH2 RH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_2, &kp LC(LG(LS(N2))), RH2 RH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_3, &kp LC(LG(LS(N3))), RH2 RH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_4, &kp LC(LG(LS(N4))), RH2 RH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_5, &kp LC(LG(LS(N5))), RH2 RH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_6, &kp LC(LG(LS(N6))), RH2 RH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_7, &kp LC(LG(LS(N7))), RH2 RH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_8, &kp LC(LG(LS(N8))), RH2 RH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_9, &kp LC(LG(LS(N9))), RH2 RH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f1, &kp LC(LG(LS(F1))), RH2 RH1 RB5 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f2, &kp LC(LG(LS(F2))), RH2 RH1 RB5 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f3, &kp LC(LG(LS(F3))), RH2 RH1 RB5 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f4, &kp LC(LG(LS(F4))), RH2 RH1 RB5 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f5, &kp LC(LG(LS(F5))), RH2 RH1 RB5 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f6, &kp LC(LG(LS(F6))), RH2 RH1 RB5 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f7, &kp LC(LG(LS(F7))), RH2 RH1 RB5 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f8, &kp LC(LG(LS(F8))), RH2 RH1 RB5 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f9, &kp LC(LG(LS(F9))), RH2 RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f10, &kp LC(LG(LS(F10))), RH2 RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f11, &kp LC(LG(LS(F11))), RH2 RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_f12, &kp LC(LG(LS(F12))), RH2 RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_semicolon, &kp LC(LG(LS(SEMICOLON))), RH2 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_colon, &kp LC(LG(LS(COLON))), RH2 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_excl, &kp LC(LG(LS(EXCL))), RH2 RH1 RB4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_dqt, &kp LC(LG(LS(EXCL))), RH2 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_at, &kp LC(LG(LS(AT))), RH2 RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_hash, &kp LC(LG(LS(HASH))), RH2 RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_dllr, &kp LC(LG(LS(DLLR))), RH2 RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_prcnt, &kp LC(LG(LS(PRCNT))), RH2 RH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_caret, &kp LC(LG(LS(CARET))), RH2 RH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_amps, &kp LC(LG(LS(AMPS))), RH2 RH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_star, &kp LC(LG(LS(STAR))), RH2 RH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_tilde, &kp LC(LG(LS(TILDE))), RH2 RH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_grave, &kp LC(LG(LS(GRAVE))), RH2 RH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_bslh, &kp LC(LG(LS(BSLH))), RH2 RH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_pipe, &kp LC(LG(LS(PIPE))), RH2 RH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_under, &kp LC(LG(LS(UNDER))), RH2 RH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_minus, &kp LC(LG(LS(MINUS))), RH2 RH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_equal, &kp LC(LG(LS(EQUAL))), RH2 RH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_plus, &kp LC(LG(LS(PLUS))), RH2 RH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_slash, &kp LC(LG(LS(SLASH))), RH2 RH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(cgs_rbrc, &kp LC(LG(LS(RBRC))), RH2 RH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_rbkt, &kp LC(LG(LS(RBKT))), RH2 RH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_lbrc, &kp LC(LG(LS(LBRC))), RH2 RH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_lbkt, &kp LC(LG(LS(LBKT))), RH2 RH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_lpar, &kp LC(LG(LS(LPAR))), RH2 RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_lt, &kp LC(LG(LS(LT))), RH2 RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_rpar, &kp LC(LG(LS(RPAR))), RH2 RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_gt, &kp LC(LG(LS(GT))), RH2 RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
 
 /* vim: set ft=c tw=174RH1 : */
