--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -345,16 +345,16 @@ ZMK_COMBO(s_home, &kp LS(HOME), RH1 RT1 RT2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_end, &kp LS(END), RH1 RB1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_pg_up, &kp LS(PG_UP), RH1 RT4 RT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_pg_dn, &kp LS(PG_DN), RH1 RB4 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_0, &kp LS(N0), RH1 RM5 LM4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_1, &kp LS(N1), RH1 RM5 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_2, &kp LS(N2), RH1 RM5 LB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_3, &kp LS(N3), RH1 RM5 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_4, &kp LS(N4), RH1 RM5 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_5, &kp LS(N5), RH1 RM5 LM2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_6, &kp LS(N6), RH1 RM5 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_7, &kp LS(N7), RH1 RM5 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_8, &kp LS(N8), RH1 RM5 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_9, &kp LS(N9), RH1 RM5 LT1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_0, &kp LS(N0), RH1 RM5 LM4, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_1, &kp LS(N1), RH1 RM5 LB3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_2, &kp LS(N2), RH1 RM5 LB2, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_3, &kp LS(N3), RH1 RM5 LB1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_4, &kp LS(N4), RH1 RM5 LM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_5, &kp LS(N5), RH1 RM5 LM2, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_6, &kp LS(N6), RH1 RM5 LM1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_7, &kp LS(N7), RH1 RM5 LT3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_8, &kp LS(N8), RH1 RM5 LT2, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_9, &kp LS(N9), RH1 RM5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f1, &kp LS(F1), RH1 RB5 LB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f2, &kp LS(F2), RH1 RB5 LB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f3, &kp LS(F3), RH1 RB5 LB1, ALL, COMBO_TERM_FAST)
@@ -367,34 +367,34 @@ ZMK_COMBO(s_f9, &kp LS(F9), RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f10, &kp LS(F10), RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f11, &kp LS(F11), RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(s_f12, &kp LS(F12), RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_semicolon, &kp LS(SEMICOLON), RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_colon, &kp LS(COLON), RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_excl, &kp LS(EXCL), RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_dqt, &kp LS(EXCL), RH1 RT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_at, &kp LS(AT), RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_hash, &kp LS(HASH), RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_dllr, &kp LS(DLLR), RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_prcnt, &kp LS(PRCNT), RH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_caret, &kp LS(CARET), RH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_amps, &kp LS(AMPS), RH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_star, &kp LS(STAR), RH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_tilde, &kp LS(TILDE), RH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_grave, &kp LS(GRAVE), RH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_bslh, &kp LS(BSLH), RH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_pipe, &kp LS(PIPE), RH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_under, &kp LS(UNDER), RH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_minus, &kp LS(MINUS), RH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_equal, &kp LS(EQUAL), RH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_plus, &kp LS(PLUS), RH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_slash, &kp LS(SLASH), RH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(s_rbrc, &kp LS(RBRC), RH1 LT2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_rbkt, &kp LS(RBKT), RH1 LM2 LB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lbrc, &kp LS(LBRC), RH1 LT2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lbkt, &kp LS(LBKT), RH1 LM2 LB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lpar, &kp LS(LPAR), RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_lt, &kp LS(LT), RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_rpar, &kp LS(RPAR), RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(s_gt, &kp LS(GT), RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_sqt, &kp LS(SQT), RH1 RT4, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_at, &kp LS(AT), RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_hash, &kp LS(HASH), RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_dllr, &kp LS(DLLR), RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_prcnt, &kp LS(PRCNT), RH1 LB0 LM0, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_caret, &kp LS(CARET), RH1 RB0 RM0, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_amps, &kp LS(AMPS), RH1 RB1 RM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_star, &kp LS(STAR), RH1 RB2 RM2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_tilde, &kp LS(TILDE), RH1 LM3 LT3, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_grave, &kp LS(GRAVE), RH1 LM2 LT2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_bslh, &kp LS(BSLH), RH1 LM1 LT1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_pipe, &kp LS(PIPE), RH1 LM0 LT0, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_under, &kp LS(UNDER), RH1 RM0 RT0, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_minus, &kp LS(MINUS), RH1 RM1 RT1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_equal, &kp LS(EQUAL), RH1 RM2 RT2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_plus, &kp LS(PLUS), RH1 RM3 RT3, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_slash, &kp LS(SLASH), RH1 RM0 RM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(s_rbrc, &kp LS(RBRC), RH1 LT2 LM1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_rbkt, &kp LS(RBKT), RH1 LM2 LB1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_lbrc, &kp LS(LBRC), RH1 LT2 LM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_lbkt, &kp LS(LBKT), RH1 LM2 LB3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_lpar, &kp LS(LPAR), RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_lt, &kp LS(LT), RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_rpar, &kp LS(RPAR), RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(s_gt, &kp LS(GT), RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_csemi, &kp SEMICOLON, RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_dcol, &kp COLON, RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(s_qexcl, &kp EXCL, RH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // cmd combos
@@ -464,7 +464,7 @@ ZMK_COMBO(g_f12, &kp LG(F12), LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_semicolon, &kp LG(SEMICOLON), LH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_colon, &kp LG(COLON), LH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_excl, &kp LG(EXCL), LH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(g_dqt, &kp LG(EXCL), LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_sqt, &kp LG(SQT), LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_at, &kp LG(AT), LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(g_hash, &kp LG(HASH), LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(g_dllr, &kp LG(DLLR), LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -558,7 +558,7 @@ ZMK_COMBO(a_f12, &kp LA(F12), LH0 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_semicolon, &kp LA(SEMICOLON), LH0 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_colon, &kp LA(COLON), LH0 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_excl, &kp LA(EXCL), LH0 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(a_dqt, &kp LA(EXCL), LH0 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_sqt, &kp LA(SQT), LH0 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_at, &kp LA(AT), LH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(a_hash, &kp LA(HASH), LH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(a_dllr, &kp LA(DLLR), LH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -652,7 +652,7 @@ ZMK_COMBO(c_f12, &kp LC(F12), RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_semicolon, &kp LC(SEMICOLON), RH0 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_colon, &kp LC(COLON), RH0 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_excl, &kp LC(EXCL), RH0 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(c_dqt, &kp LC(EXCL), RH0 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_sqt, &kp LC(SQT), RH0 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_at, &kp LC(AT), RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(c_hash, &kp LC(HASH), RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(c_dllr, &kp LC(DLLR), RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -746,7 +746,7 @@ ZMK_COMBO(hyp_f12, &kp LG(LA(LS(LC(F12)))), RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_semicolon, &kp LG(LA(LS(LC(SEMICOLON)))), RH2 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_colon, &kp LG(LA(LS(LC(COLON)))), RH2 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_excl, &kp LG(LA(LS(LC(EXCL)))), RH2 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(hyp_dqt, &kp LG(LA(LS(LC(EXCL)))), RH2 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_sqt, &kp LG(LA(LS(LC(SQT)))), RH2 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_at, &kp LG(LA(LS(LC(AT)))), RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(hyp_hash, &kp LG(LA(LS(LC(HASH)))), RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(hyp_dllr, &kp LG(LA(LS(LC(DLLR)))), RH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -841,7 +841,7 @@ ZMK_COMBO(meh_f12, &kp LA(LS(LC(F12))), LH2 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_semicolon, &kp LA(LS(LC(SEMICOLON))), LH2 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_colon, &kp LA(LS(LC(COLON))), LH2 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_excl, &kp LA(LS(LC(EXCL))), LH2 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(meh_dqt, &kp LA(LS(LC(EXCL))), LH2 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_sqt, &kp LA(LS(LC(SQT))), LH2 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_at, &kp LA(LS(LC(AT))), LH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(meh_hash, &kp LA(LS(LC(HASH))), LH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(meh_dllr, &kp LA(LS(LC(DLLR))), LH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -936,7 +936,7 @@ ZMK_COMBO(ac_f12, &kp LA(LC(F12)), LH0 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_semicolon, &kp LA(LC(SEMICOLON)), LH0 RH0 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_colon, &kp LA(LC(COLON)), LH0 RH0 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_excl, &kp LA(LC(EXCL)), LH0 RH0 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ac_dqt, &kp LA(LC(EXCL)), LH0 RH0 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_sqt, &kp LA(LC(SQT)), LH0 RH0 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_at, &kp LA(LC(AT)), LH0 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ac_hash, &kp LA(LC(HASH)), LH0 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ac_dllr, &kp LA(LC(DLLR)), LH0 RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1030,7 +1030,7 @@ ZMK_COMBO(ag_f12, &kp LA(LG(F12)), LH0 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_semicolon, &kp LA(LG(SEMICOLON)), LH0 LH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_colon, &kp LA(LG(COLON)), LH0 LH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_excl, &kp LA(LG(EXCL)), LH0 LH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ag_dqt, &kp LA(LG(EXCL)), LH0 LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_sqt, &kp LA(LG(SQT)), LH0 LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_at, &kp LA(LG(AT)), LH0 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ag_hash, &kp LA(LG(HASH)), LH0 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ag_dllr, &kp LA(LG(DLLR)), LH0 LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1124,7 +1124,7 @@ ZMK_COMBO(as_f12, &kp LA(LS(F12)), LH0 RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_semicolon, &kp LA(LS(SEMICOLON)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_colon, &kp LA(LS(COLON)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_excl, &kp LA(LS(EXCL)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(as_dqt, &kp LA(LS(EXCL)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_sqt, &kp LA(LS(SQT)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_at, &kp LA(LS(AT)), LH0 RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(as_hash, &kp LA(LS(HASH)), LH0 RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(as_dllr, &kp LA(LS(DLLR)), LH0 RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1218,7 +1218,7 @@ ZMK_COMBO(cg_f12, &kp LC(LG(F12)), LH1 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_semicolon, &kp LC(LG(SEMICOLON)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_colon, &kp LC(LG(COLON)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_excl, &kp LC(LG(EXCL)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cg_dqt, &kp LC(LG(EXCL)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_sqt, &kp LC(LG(SQT)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_at, &kp LC(LG(AT)), LH1 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cg_hash, &kp LC(LG(HASH)), LH1 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cg_dllr, &kp LC(LG(DLLR)), LH1 RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1312,7 +1312,7 @@ ZMK_COMBO(cs_f12, &kp LC(LS(F12)), RH1 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_semicolon, &kp LC(LS(SEMICOLON)), RH0 RH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_colon, &kp LC(LS(COLON)), RH0 RH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_excl, &kp LC(LS(EXCL)), RH0 RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cs_dqt, &kp LC(LS(EXCL)), RH0 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_sqt, &kp LC(LS(SQT)), RH0 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_at, &kp LC(LS(AT)), RH1 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cs_hash, &kp LC(LS(HASH)), RH1 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cs_dllr, &kp LC(LS(DLLR)), RH1 RH0 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1406,7 +1406,7 @@ ZMK_COMBO(gs_f12, &kp LG(LS(F12)), RH1 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_semicolon, &kp LG(LS(SEMICOLON)), RH1 LH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_colon, &kp LG(LS(COLON)), RH1 LH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_excl, &kp LG(LS(EXCL)), RH1 LH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(gs_dqt, &kp LG(LS(EXCL)), RH1 LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_sqt, &kp LG(LS(SQT)), RH1 LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_at, &kp LG(LS(AT)), RH1 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(gs_hash, &kp LG(LS(HASH)), RH1 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(gs_dllr, &kp LG(LS(DLLR)), RH1 LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1500,7 +1500,7 @@ ZMK_COMBO(acg_f12, &kp LA(LC(LG(F12))), LH2 RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_semicolon, &kp LA(LC(LG(SEMICOLON))), LH2 RH2 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_colon, &kp LA(LC(LG(COLON))), LH2 RH2 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_excl, &kp LA(LC(LG(EXCL))), LH2 RH2 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_dqt, &kp LA(LC(LG(EXCL))), LH2 RH2 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_sqt, &kp LA(LC(LG(SQT))), LH2 RH2 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_at, &kp LA(LC(LG(AT))), LH2 RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(acg_hash, &kp LA(LC(LG(HASH))), LH2 RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(acg_dllr, &kp LA(LC(LG(DLLR))), LH2 RH2 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1594,7 +1594,7 @@ ZMK_COMBO(ags_f12, &kp LA(LG(LS(F12))), LH2 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_semicolon, &kp LA(LG(LS(SEMICOLON))), LH2 LH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_colon, &kp LA(LG(LS(COLON))), LH2 LH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_excl, &kp LA(LG(LS(EXCL))), LH2 LH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_dqt, &kp LA(LG(LS(EXCL))), LH2 LH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_sqt, &kp LA(LG(LS(SQT))), LH2 LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_at, &kp LA(LG(LS(AT))), LH2 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ags_hash, &kp LA(LG(LS(HASH))), LH2 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ags_dllr, &kp LA(LG(LS(DLLR))), LH2 LH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
@@ -1688,7 +1688,7 @@ ZMK_COMBO(cgs_f12, &kp LC(LG(LS(F12))), RH2 RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_semicolon, &kp LC(LG(LS(SEMICOLON))), RH2 RH1 RB2, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_colon, &kp LC(LG(LS(COLON))), RH2 RH1 RB3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_excl, &kp LC(LG(LS(EXCL))), RH2 RH1 RB4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cgs_dqt, &kp LC(LG(LS(EXCL))), RH2 RH1 RT4, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_sqt, &kp LC(LG(LS(SQT))), RH2 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_at, &kp LC(LG(LS(AT))), RH2 RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cgs_hash, &kp LC(LG(LS(HASH))), RH2 RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cgs_dllr, &kp LC(LG(LS(DLLR))), RH2 RH1 LB1 LM1, ALL, COMBO_TERM_SLOW)
